Update and rename index.html to OurMission.html

--- a/Website/OurMission.html
+++ b/Website/OurMission.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MSU Rocketry</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./OurMission.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,6 +19,6 @@
     <footer>
         <p>&copy; 2024 MSU Rocketry. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="OurMission.js"></script>
 </body>
 </html>
